@@ -1,5 +1,7 @@
 Changes in 0.11.1:
-  * erasing troves enforces dependencies
+  * erasing troves enforces dependencies -- this requires a database 
+    conversion (run the conary-add-filedeps script which fixed the
+    conversion to 0.11.0 after updating conary)
 
 Changes in 0.11.0:
   * massive rework of fileId mechanism to allow better flavor support
